# Server

./: .gitignore  LICENSE  README.md  go.mod  go.sum  main.go  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: bandit.yml  poetry.yml  pyright.yml
config/: config.go  opted_out.go  profane_words.go
database/: database.go  schemas.go
reviewdb/: routes.go
schemas/: 0_database.sql  1_user.sql  2_stupidity.sql  2_tables.sql  stupidity.sql
stupidity_db_server/: __init__.py  __main__.py  config.example.json5  config.json5
stupidity_db_server/annotations/: __init__.py  user_id.py
stupidity_db_server/depends/: __init__.py  get_db.py  get_oauth.py  get_redis.py  get_user_id.py
stupidity_db_server/depends/get/: __init__.py  app.py  db.py  oauth.py  redis.py
stupidity_db_server/depends/oauth/: __init__.py  discord_user.py  get_oauth2.py  get_token.py  get_user.py
stupidity_db_server/depends/oauth/types/: __init__.py
stupidity_db_server/depends/oauth2/: __init__.py  _get_oauth2.py  get_oauth2.py  get_user.py  requires_authentication.py
stupidity_db_server/depends/params/: __init__.py  user_id.py
stupidity_db_server/ductape/: __init__.py  oauth_client.py
stupidity_db_server/routes/: __init__.py  authorize.py
stupidity_db_server/routes/api/: __init__.py
stupidity_db_server/routes/api/users/: __init__.py  reviews.py  stupidity.py
stupidity_db_server/routes/users/: stupidity.py
stupidity_db_server/util/: __init__.py  generate_example.py  generate_examples.py
stupidity_db_server/utils/: generate_examples.py
stupiditydb/: database.go  routes.go
