[tool.poetry]
name = "stupidity-db-server"
version = "0.0.1"
description = "No brain wrinkles?"
authors = ["StupidityDB Development Team"]

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "*"
aioredis = "*"
fastapi = { version = "*", extras = ["all"] }
fastapi-discord = "*"
fastapi-limiter = { git = "https://github.com/RGBCube/fastapi-limiter.git" }
json5 = "*"

[tool.poetry.scripts]
server = "stupidity_db_server.__main__:main"
